@@ -23,6 +23,7 @@ Release 0.19.0 - Unreleased
    HBASE-918   Region balancing during startup makes cluster unstable
    HBASE-921   region close and open processed out of order; makes for 
                disagreement between master and regionserver on region state
+   HBASE-925   HRS NPE on way out if no master to connect to
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
